# mq-task

./: Cargo.toml  README.md  sections.mq
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md  demo.tape
src/: config.rs  error.rs  lib.rs  main.rs  runner.rs  tui.rs
tests/: integration_test.rs
