[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "A task runner using Markdown"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "taskrunner"]
license = "MIT"
name = "mq-task"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.1.5"

[[bin]]
name = "mq-task"
path = "src/main.rs"

[lib]
name = "mq_task"
path = "src/lib.rs"

[dependencies]
clap = {version = "4.5.57", features = ["derive"]}
colored = "3.1"
miette = {version = "7.6.0", features = ["fancy"]}
mq-lang = "0.5.14"
mq-markdown = "0.5.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.18"
toml = "1.0.0"
which = "8.0.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/mq-task-{ target }{ binary-ext }"
